# Yolo_LPR_RK3568_FPGA

./: .gitignore  README.md
1_PC_Training/: README.md  requirements.txt
1_PC_Training/LPRNet_Pytorch/: test_LPRNet.py  train_LPRNet.py  训练记录7char.txt  训练记录8char.txt
1_PC_Training/LPRNet_Pytorch/weights/7char/: LPRNet_7char_20260423192224.pth  LPRNet__iteration_10000.pth  LPRNet__iteration_2000.pth  LPRNet__iteration_4000.pth  LPRNet__iteration_6000.pth  LPRNet__iteration_8000.pth
1_PC_Training/LPRNet_Pytorch/weights/8char/: LPRNet_8char_20260422133705.pth  LPRNet_8char_20260423205938.pth  LPRNet_8char_20260423213642.pth  LPRNet_8char_20260423221903.pth  LPRNet_8char_20260425150614.pth  LPRNet__iteration_2000.pth  LPRNet__iteration_4000.pth  LPRNet__iteration_6000.pth  LPRNet__iteration_8000.pth
1_PC_Training/LPRNet_Pytorch/weights/best/: LPRNet_20260421002711.pth  LPRNet_7char_20260422011108.pth  LPRNet_8char_20260424001641.pth  LPRNet_8char_20260425132006.pth
1_PC_Training/configs/: yolo_config.yaml
1_PC_Training/scripts/: aaa.py  analyze_lprnet_dataset_distribution.py  analyze_yolo_dataset_distribution.py  flatten_plate.py  letterbox_resize_lprnet.py  migrate_and_filter_crpd.py  process_cblprd.py  process_ccpd.py  process_crpd.py  process_lprnet_tight_crop.py  split_lprnet_dataset.py  test_yolo.py  test_yolo_val.py  train_yolo.py  yolo_lprnet_crops.py  yolo_utils.py
1_PC_Training/scripts/runs/train_results/yolov8n_multi_class/: args.yaml  results.csv
2_Model_Conversion_PC_Simulation/: README.md
2_Model_Conversion_PC_Simulation/LPRNet/: README.md
2_Model_Conversion_PC_Simulation/LPRNet/model/: LPRNet_7char_20260425124555.pth  LPRNet_8char_20260425152745.pth  lprnet7_dataset.txt  lprnet7repair.onnx  lprnet7repair_i8.rknn  lprnet8_dataset.txt  lprnet8repair.onnx  lprnet8repair_fp.rknn
2_Model_Conversion_PC_Simulation/LPRNet/python/: 7quant_dataset.py  8quant_dataset.py  convert.py  export_onnx.py  export_onnx_repair.py  lprnet.py  lprnet_PC_eval.py  resize_images.py
2_Model_Conversion_PC_Simulation/py_utils/: coco_utils.py
2_Model_Conversion_PC_Simulation/yolov8/model/: dataset.txt  test_dataset.txt
2_Model_Conversion_PC_Simulation/yolov8/python/: convert.py  quant_dataset.py  rename.py  yolov8.py  yolov8_PC.py
3_NPU_Yolov8_LPR_Demo/: CMakeLists.txt  Makefile  README.md  build-linux.sh  build_and_push.sh  generate_c_font_array.py
3_NPU_Yolov8_LPR_Demo/include/: drm_display.h  lprnet.h  postprocess.h  simple_tracker.h  yolo_lpr_pipeline.h  yolov8.h
3_NPU_Yolov8_LPR_Demo/model/: MP4转H264.bat  MP4转H265.bat  labels_list.txt  lprnet7.rknn  lprnet7repair_fp.rknn  lprnet8.rknn  lprnet8repair_i8.rknn  testvideo2.h264  testvideo3.h264
3_NPU_Yolov8_LPR_Demo/src/: drm_display.cc  lprnet.cc  main_picture.cc  main_video.cc  postprocess.cc  simple_tracker.cc  yolo_lpr_pipeline.cc  yolov8_zero_copy.cc
3_NPU_Yolov8_LPR_Demo/utils/: CMakeLists.txt  image_drawing.c  image_utils.c  plate_font.h
4_mes_fpga_dma_memcpy_demo/: README.md
4_mes_fpga_dma_memcpy_demo/src/: Makefile  mes_dma_memcpy_demo.c
